--- a/MyApps/Base.lproj/Main.storyboard
+++ b/MyApps/Base.lproj/Main.storyboard
@@ -39,6 +39,7 @@
                                     <outlet property="imgView" destination="m69-Ua-bnj" id="eDO-4l-37m"/>
                                     <outlet property="lblCategoria" destination="m3A-gE-CB9" id="L7O-yr-NV9"/>
                                     <outlet property="lblNome" destination="fbI-GX-rgw" id="PHF-lS-oth"/>
+                                    <segue destination="gzf-Lv-59O" kind="show" id="Urd-sk-Sjr"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -51,6 +52,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N96-yR-WKB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4232" y="1024"/>
+        </scene>
+        <!--App Detail View Controller-->
+        <scene sceneID="XK8-7H-AKd">
+            <objects>
+                <viewController id="gzf-Lv-59O" customClass="AppDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="HDQ-kj-Kv8"/>
+                        <viewControllerLayoutGuide type="bottom" id="uBm-Tt-LUu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XAA-5x-neL">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kmf-ky-c71" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4939" y="1024"/>
         </scene>
     </scenes>
 </document>
