--- a/MyApps/Base.lproj/Main.storyboard
+++ b/MyApps/Base.lproj/Main.storyboard
@@ -55,9 +55,10 @@
                                 <action selector="editTable:" destination="ema-XE-gVn" id="cBb-CJ-Qmj"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="xvQ-OS-V6K">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="b9z-b4-8zI">
                             <connections>
-                                <action selector="addApp:" destination="ema-XE-gVn" id="D2k-BH-9PO"/>
+                                <action selector="addApp:" destination="ema-XE-gVn" id="kXY-bz-GbV"/>
+                                <segue destination="xXP-4j-FMH" kind="show" id="rhX-uY-ZxA"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -81,6 +82,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4de-RU-Wn5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3452" y="1420"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="UAR-d3-a7d">
+            <objects>
+                <viewController id="xXP-4j-FMH" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ig8-7e-KeK"/>
+                        <viewControllerLayoutGuide type="bottom" id="Jkc-Ni-m6s"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2U3-Xi-dhM">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GzO-ZN-fwa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5056" y="428"/>
         </scene>
         <!--App Detail View Controller-->
         <scene sceneID="XK8-7H-AKd">
